# controllers/driftBottleApi.go
@@ -93,11 +93,11 @@ func (this *DriftBottleController) PickUpDriftBottle() {
 	uId := this.MustInt64("uId")
 	bottleId, _ := this.GetInt64("bottleId", 0)
 
-	var driftBottle models.DriftBottle
+	var driftBottle models.DriftBottleDetail
 	if bottleId == 0 {
 		success := getPickUpDriftBottleFlag()
 		if success != 1 {
-			var driftBottle models.DriftBottle
+			var driftBottle models.DriftBottleDetail
 			driftBottle.BottleType = 0
 			driftBottle.BottleName = "其他"
 			driftBottle.Content = getPickUpOther()
@@ -108,7 +108,7 @@ func (this *DriftBottleController) PickUpDriftBottle() {
 
 		//randomSql := "SELECT * FROM drift_bottle WHERE bottle_id >= ((SELECT MAX(bottle_id) FROM drift_bottle)-(SELECT MIN(bottle_id) FROM drift_bottle)) * RAND() + (SELECT MIN(bottle_id) FROM drift_bottle)  LIMIT 1"
 		//randomSql := "SELECT * FROM drift_bottle WHERE deleted_at is null and status=1 order by RAND() LIMIT 1"
-		randomSql := "SELECT drift_bottle.* FROM drift_bottle, (SELECT ((1/COUNT(*))*100) as n FROM drift_bottle WHERE drift_bottle.deleted_at is null and drift_bottle.status=1) as x WHERE RAND()<=x.n and drift_bottle.deleted_at is null and drift_bottle.status=1 ORDER BY RAND() LIMIT 1"
+		randomSql := "SELECT drift_bottle.*, (select user.nick_name from user where user.u_id=drift_bottle.sender_uid) as sender_nick_name, (select user.nick_name from user where user.u_id=drift_bottle.receiver_uid) as receiver_nick_name FROM drift_bottle, (SELECT ((1/COUNT(*))*100) as n FROM drift_bottle WHERE drift_bottle.deleted_at is null and drift_bottle.status=1) as x WHERE RAND()<=x.n and drift_bottle.deleted_at is null and drift_bottle.status=1 ORDER BY RAND() LIMIT 1"
 		base.DBEngine.SQL(randomSql).Get(&driftBottle)
 
 		driftBottle.ReceiverUid = uId
@@ -204,7 +204,7 @@ func (this *DriftBottleController) GetMyDriftBottleList() {
 	pageSize := this.GetPageSize("pageSize")
 
 	totalSql := "select count(1) from drift_bottle where drift_bottle.deleted_at is null "
-	dataSql := "select drift_bottle.* from drift_bottle where drift_bottle.deleted_at is null "
+	dataSql := "select drift_bottle.*, (select user.nick_name from user where user.u_id=drift_bottle.sender_uid) as sender_nick_name, (select user.nick_name from user where user.u_id=drift_bottle.receiver_uid) as receiver_nick_name from drift_bottle where drift_bottle.deleted_at is null "
 	if queryType == 1 {
 		totalSql += " and drift_bottle.sender_uid='"+strconv.FormatInt(uId, 10)+"' "
 		dataSql += " and drift_bottle.sender_uid='"+strconv.FormatInt(uId, 10)+"' "
@@ -222,7 +222,7 @@ func (this *DriftBottleController) GetMyDriftBottleList() {
 		return
 	}
 
-	var driftBottleList []models.DriftBottle
+	var driftBottleList []models.DriftBottleDetail
 	if total > 0 {
 		err := base.DBEngine.SQL(dataSql).Find(&driftBottleList)
 		if err != nil {
@@ -233,7 +233,7 @@ func (this *DriftBottleController) GetMyDriftBottleList() {
 	}
 
 	if driftBottleList == nil {
-		driftBottleList = make([]models.DriftBottle, 0)
+		driftBottleList = make([]models.DriftBottleDetail, 0)
 	}
 
 	this.ReturnData = models.DriftBottleListContainer{models.BaseListContainer{total, pageNum, pageTime}, driftBottleList}
